appId: com.anonymous.Frontend
---
- launchApp
- tapOn: "Login" # remove if already on login screen
- tapOn:
    point: 100,300 # approx. username field
- inputText: "lululemom"
- tapOn:
    point: 100,400 # approx. password field
- inputText: "Lululu3@"
- tapOn: "Login"
- assertVisible: "Home"
