appId: null
---
- tapOn: "Open Settings"
- tapOn:
    point: "64%,51%"
- tapOn:
    point: "64%,8%"
- tapOn: ", Logout"
- tapOn:
    id: "host.exp.exponent:id/alert_title"
- tapOn: "Are you sure you want to logout?"
- assertVisible:
    id: "host.exp.exponent:id/buttonPanel"
- assertVisible: "CANCEL"
- assertVisible:
    text: "LOGOUT"
    index: 1
- tapOn:
    id: "android:id/button2"
- tapOn: ", Logout"
- tapOn:
    text: "LOGOUT"
    index: 1
- tapOn: "Success"
- tapOn:
    point: "50%,48%"
- assertVisible:
    id: "android:id/button1"
- tapOn: "OK"
