appId: com.anonymous.BeSide
---
- launchApp
- tapOn: { id: "welcomeLoginButton" }
- tapOn: { id: "usernameInput" }
- inputText: "lululemom"
- tapOn: { id: "passwordInput" }
- inputText: "Lululu3@"
- tapOn: { id: "loginButton" }
- waitForAnimationToEnd
- assertVisible: "Safe Journey Companion"
- assertVisible:
      id: "android:id/content"
- tapOn: "Open Settings"
- tapOn:
      point: "64%,8%"
- tapOn:
      point: "64%,51%"
- assertVisible: "PROFILE"
- assertVisible: "ACCOUNT"
- assertVisible: ", Edit Profile"
- assertVisible: ", Profile Visibility"
- assertVisible: ", Delete Account"
- assertVisible: ", Logout"
